--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,109 @@
 
 /*other*/
 
-}
-.page{
 
-    
+
+/****************************
+*****************************
+          Page 1
+*****************************
+****************************/
+
+}
+.header {
+    background-color: ;
+}
+.header-nav {
+}
+.logo {
+}
+.header-nav-list {
+}
+.header-nav-list-item {
+}
+.header-nav-list-contact {
+}
+.header-nav-list-contacti-item {
+}
+.link {
+}
+.section-btn {
+    background-color: #2F303A;
+}
+.section-title {
+}
+.btn {
+}
+.description {
+}
+.titlle {
+}
+.description-list {
+}
+.description-list-item {
+}
+.description-tittle {
+}
+.description-text {
+}
+.about {
+}
+.tittle {
+}
+.about-list {
+}
+.about-list-item {
+}
+.about-list-item-img {
+}
+.team {
+    background-color: #F5F4FA;
+}
+.title {
+}
+.team-list {
+}
+.team-list-item {
+}
+.team-list-item-img {
+}
+.name {
+}
+.profession {
+}
+.footer {
+}
+.footer-bloc {
+}
+.address-maps {
+}
+.address-maps-text {
+}
+.address-list {
+}
+.address-list-item {
+}
+.address-list-item-link {
+}
+
+/****************************
+*****************************
+          Page 2
+*****************************
+****************************/
+.porfolio {
+}
+.porfolio-list {
+}
+.porfolio-list-item {
+}
+.portfolio-list-img {
+}
+.portfolio-list-img-item {
+}
+.porfolio-img {
+}
+.portfolio-tittle {
+}
+.portfolio-name {
 }
